...

        TabRow(selectedTabIndex = selectedTab.ordinal) {

            Tab(
                selected = selectedTab == InventoryTab.PRODUCTS,
                onClick = { selectedTab = InventoryTab.PRODUCTS },
                text = { Text("Products") }
            )

            Tab(
                selected = selectedTab == InventoryTab.CATEGORIES,
                onClick = { selectedTab = InventoryTab.CATEGORIES },
                text = { Text("Categories") }
...
